# walnut

./: .gitignore  .pre-commit-config.yaml  NOTICE.md  README.md  pyproject.toml
docs/: api.rst  conf.py  configuration.rst  extending.rst  index.rst  usage.rst
walnut/: __init__.py  __main__.py  bot.py  config.py  helpers.py
walnut/_data/: config.toml.example
walnut/discord/: helpers.py  markdown.py
walnut/hooks/: __init__.py  base.py  relay.py
walnut/irc/: formatting.py  markdown.py  message.py  nicknames.py
