[tool.poetry]
name = "walnut"
version = "0.1.0"
description = "An extensible hybrid Discord/IRC relay bot"
authors = ["Velocidensity"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.0"
pyrcb2 = "^0.6.2"
mistune = {git = "https://github.com/lepture/mistune"}  # 3.0.0rc4
click = "^8.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-pyproject = "^1.1.0.post0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
walnut = "walnut.__main__:cli"

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120

[tool.pyright]
venvPath = [".venv"]

[tool.mypy]
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.setuptools.packages.find]
where = ["walnut/_data"]
