[tool.poetry]
name = "walnut"
version = "0.1.8"
description = "An extensible hybrid Discord/IRC relay bot"
authors = ["Velocidensity"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.0"
pyrcb2 = "^0.6.2"
mistune = "^3.0.0"
click = "^8.1.3"
toml = "^0.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.991"
ruff = "^0.0.286"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
walnut = "walnut.__main__:cli"

[tool.ruff]
select = [
    "A",   # flake8-builtins
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (Error)
    "F",   # pyflakes
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "W"    # pycodestyle (Warning)
]
line-length = 120
ignore = [
    "SIM105", # suppressible-exception
]
exclude = ["docs"]

[tool.isort]
line_length = 120

[tool.pyright]
venvPath = [".venv"]

[tool.mypy]
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.setuptools.packages.find]
where = ["walnut/_data"]
